--- a/halo2wrong/Cargo.toml
+++ b/halo2wrong/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 num-bigint = { version = "0.4", features = ["rand"] }
 num-integer = "0.1"
 num-traits = "0.2"
-halo2 = { package = "halo2_proofs", git = "https://github.com/kroma-network/halo2", branch = "halo2-with-tachyon" }
+halo2 = { package = "halo2_proofs", git = "https://github.com/kroma-network/halo2", rev = "4ad1359" }
 group = "0.12"
 
 [dev-dependencies]
